--- a/_posts/2023-12-14-etc-miner.md
+++ b/_posts/2023-12-14-etc-miner.md
@@ -8,9 +8,6 @@ keywords: NBminer, 挖矿，ETC，虚拟币
 
 一次挖矿记录
 
-## 前言
-
-最近美联储停止加息，虚拟币又涨了，让我想起了前几年矿潮的欢乐时光，故此记录。
 
 ## 矿池的选择
 
@@ -26,7 +23,7 @@ keywords: NBminer, 挖矿，ETC，虚拟币
 
 这样，每挖够一部分币，鱼池就会转币到币安钱包里。
 
-## 使用redir端口转发
+## 使用redir端口转发（弃用）
 
 因为鱼池（基本包括所有矿池）都被墙了，所以需要一个vps作为中转。
 
@@ -60,13 +57,19 @@ GitHub下载：https://github.com/NebuTech/NBMiner/releases
 nbminer -a etchash -o stratum+tcp://domain.com:6666 -u username.workername --enable-dag-cache
 ```
 
-解释：其中domain.com:6666是我vps域名和转发的端口，
+解释：其中domain.com:6666是我vps域名和转发的端口（弃用），
 
 如果人在墙外，就用etc-zil.f2pool.com:6200
 
 username是注册鱼池的用户名，填错了币就没了。
 
 workername是用于区分矿机的，自行设置。
+
+现在我用的是在后面加上-proxy 127.0.0.1:1080参数，使用本地socks5代理，实测不会断联（redir转发会经常断联导致挖矿中断，已弃用）。
+
+```
+nbminer -a etchash -o stratum+tcp://etc-zil.f2pool.com:6200 -u poolminer2021.rtx3060etc --enable-dag-cache -log -proxy 127.0.0.1:1080
+```
 
 ## 查看收益
 
